Fix T59546: Grease Pencil Edit: Rotation around individual origins error

Thanks to Habib Gahbiche (@zazizizou) for helping fixing this bug. See D4156.